# Zelqor

./: .dockerignore  .env.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.dev  LICENSE  LOAD_TESTING.md  Makefile  PLAN.md  PLAN_MIGRATE_TO_PIXIE.md  README.md  SOUND_PROMPTS.md  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  compose.prod.yml  compose.yml  conftest.py  entrypoint.sh  plan.md  pyproject.toml
.claude/agents/: devops.md  django-developer.md  frontend-developer.md  qa-tester.md  rust-developer.md
.github/workflows/: ci.yml  flutter-build.yml  release.yml
apps/: dashboard.py  internal_auth.py  pagination.py  test_admin.py  test_dashboard.py  test_management_commands.py  test_utils.py  utils.py
apps/accounts/: admin.py  auth.py  backends.py  friends_api.py  messages_api.py  middleware.py  models.py  push.py  schemas.py  social_auth.py  steam_auth.py  tasks.py  tests.py  views.py
apps/assets/: admin.py  api.py  models.py  registry.py  tests.py
apps/chat/: admin.py  internal_api.py  models.py  tests.py
apps/clans/: admin.py  api.py  apps.py  models.py  permissions.py  schemas.py  tasks.py  tests.py
apps/crafting/: admin.py  apps.py  models.py  schemas.py  tests.py  views.py
apps/developers/: admin.py  apps.py  auth.py  middleware.py  models.py  oauth_views.py  public_views.py  schemas.py  signals.py  tasks.py  tests.py  views.py
apps/engagement/: admin.py  models.py  schemas.py  tasks.py  views.py
apps/game/: admin.py  consumers.py  engine.py  internal_api.py  metrics.py  models.py  schemas.py  state.py  tasks.py  tests.py  views.py
apps/game_config/: admin.py  apps.py  decorators.py  forms.py  models.py  modules.py  schemas.py  tests.py  views.py
apps/geo/: admin.py  apps.py  models.py  schemas.py  tests.py  views.py
apps/inventory/: admin.py  models.py  schemas.py  tasks.py  tests.py  views.py
apps/marketplace/: admin.py  models.py  schemas.py  tasks.py  tests.py  views.py
apps/matchmaking/: admin.py  apps.py  consumers.py  events.py  internal_api.py  models.py  schemas.py  tasks.py  tests.py  views.py
apps/notifications/: admin.py  models.py  publisher.py  schemas.py  services.py  tests.py  views.py
apps/payments/: admin.py  models.py  schemas.py  services.py  stripe_service.py  views.py
apps/shop/: tests.py  views.py
caddy/: Caddyfile  Caddyfile.prod
cli/src/: config.rs
config/: celery.py  logging.py  routing.py  settings.py  test_runner.py  test_settings.py  test_urls.py  urls.py
config/test_geo_migrations/: 0001_initial.py  0002_region_map_source_id_region_sea_distances.py
desktop/: build.sh
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs  steam.rs
docs/: ARCHITECTURE_EVOLUTION.md
fixtures/: bot_users.json  game_config.json
frontend/: .dockerignore  .gitignore  .pnpmBuiltDependencies.json  Dockerfile  biome.json  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  manifest.ts  not-found.tsx  page.tsx  robots.ts  sitemap.ts  sw.ts
frontend/components/: ClanTag.tsx  ModuleGate.tsx  QueryProvider.tsx  SystemModulesProvider.tsx  TargetCursor.tsx
frontend/contexts/: MatchContext.tsx
frontend/e2e/: auth.spec.ts  dashboard.spec.ts  fixtures.ts  game.spec.ts  matchmaking.spec.ts
frontend/hooks/: SocialSocketContext.tsx  useAudio.ts  useAuth.tsx  useBombardmentEvents.ts  useChat.tsx  (+16 more)
gateway/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.dev
gateway/crates/maplord-ai/src/: lib.rs  strategy.rs  tutorial.rs
gateway/crates/maplord-anticheat/: Cargo.toml
gateway/crates/maplord-anticheat/src/: lib.rs
gateway/crates/maplord-anticheat/tests/: redis_integration.rs
gateway/crates/maplord-django/: Cargo.toml
gateway/crates/maplord-django/src/: lib.rs
gateway/crates/maplord-engine/: Cargo.toml
gateway/crates/maplord-engine/src/: lib.rs  types.rs
gateway/crates/maplord-gateway/: Cargo.toml
gateway/crates/maplord-gateway/src/: auth.rs  chat.rs  config.rs  game.rs  main.rs  matchmaking_ws.rs  social.rs  state.rs  voice.rs  ws_auth.rs
gateway/crates/maplord-matchmaking/: Cargo.toml
gateway/crates/maplord-matchmaking/src/: lib.rs
gateway/crates/maplord-matchmaking/tests/: django_integration.rs  redis_integration.rs
gateway/crates/maplord-state/: Cargo.toml
gateway/crates/maplord-state/src/: lib.rs
gateway/crates/maplord-state/tests/: redis_integration.rs
gateway/crates/zelqor-ai/: Cargo.toml
gateway/crates/zelqor-ai/src/: lib.rs  strategy.rs  tutorial.rs
gateway/crates/zelqor-anticheat/: Cargo.toml
gateway/crates/zelqor-anticheat/src/: lib.rs
gateway/crates/zelqor-anticheat/tests/: redis_integration.rs
gateway/crates/zelqor-django/: Cargo.toml
gateway/crates/zelqor-django/src/: lib.rs
gateway/crates/zelqor-engine/: Cargo.toml
gateway/crates/zelqor-gamenode/: Cargo.toml
gateway/crates/zelqor-gamenode/src/: config.rs  main.rs  match_runner.rs  plugin_loader.rs
gateway/crates/zelqor-gateway/: Cargo.toml
gateway/crates/zelqor-gateway/src/: auth.rs  config.rs  game.rs  main.rs  matchmaking_ws.rs  server_registry.rs  server_ws.rs  state.rs
gateway/crates/zelqor-matchmaking/: Cargo.toml
gateway/crates/zelqor-matchmaking/src/: lib.rs
gateway/crates/zelqor-matchmaking/tests/: django_integration.rs  redis_integration.rs
gateway/crates/zelqor-plugins/: Cargo.toml
gateway/crates/zelqor-plugins/src/: host.rs  lib.rs  sandbox.rs
gateway/crates/zelqor-plugins/wit/: plugin.wit
gateway/crates/zelqor-protocol/src/: lib.rs
gateway/crates/zelqor-state/: Cargo.toml
gateway/crates/zelqor-state/src/: lib.rs
gateway/crates/zelqor-state/tests/: redis_integration.rs
monitoring/: alloy-config.alloy
plugins/: Cargo.toml
promo/: package.json  pnpm-lock.yaml  tsconfig.json
redis/: redis.conf
scripts/: cheat_simulator.py  convert_provinces_to_geojson.py  generate_prod_env.py  generate_vapid_keys.py
tests/: test_integration.py
twa/: README.md  maplord.keystore  settings.gradle
(+2608 files in other folders)
