[workspace]
resolver = "2"
members = [
    "crates/maplord-gateway",
    "crates/maplord-engine",
    "crates/maplord-state",
    "crates/maplord-matchmaking",
    "crates/maplord-django",
    "crates/maplord-ai",
    "crates/maplord-anticheat",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
