[package]
name = "maplord-matchmaking"
version = "0.1.0"
edition = "2021"

[dependencies]
maplord-django = { path = "../maplord-django" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

dashmap = "6"
futures = "0.3"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
