[package]
name = "zelqor-gamenode"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zelqor-gamenode"
path = "src/main.rs"

[dependencies]
zelqor-protocol = { path = "../zelqor-protocol" }
zelqor-engine = { path = "../zelqor-engine" }
zelqor-state = { path = "../zelqor-state" }
zelqor-ai = { path = "../zelqor-ai" }
zelqor-anticheat = { path = "../zelqor-anticheat" }
zelqor-plugins = { path = "../zelqor-plugins" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
dotenvy = "0.15"
anyhow = "1"
dashmap = "6"
sha2 = "0.10"
